[package]
name = "cya"
version = "0.0.2"
authors = ["Ridwan Hoq <ridhoq@users.noreply.github.com>"]
edition = "2018"
description = "A HTTP load testing utility"
license = "MIT"
repository = "https://github.com/ridhoq/cya"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "3.0.0-beta.2"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.2.0", features = ["full"] }
uuid = { version = "0.8", features = ["v4"] }
