[package]
name = "cya"
version = "0.0.3"
authors = ["Ridwan Hoq <ridhoq@users.noreply.github.com>"]
edition = "2018"
description = "A HTTP load testing utility"
license = "MIT"
repository = "https://github.com/ridhoq/cya"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
average = "0.10.6"
clap = "3.0.0-beta.2"
#hdrhistogram = "7.2.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.2.0", features = ["full"] }
uuid = { version = "0.8", features = ["v4"] }
